Taking a stab at fixing the image flicker on mobile by loading the next image under the current image.

--- a/src/assets/scss/theme-1.scss
+++ b/src/assets/scss/theme-1.scss
@@ -801,32 +801,24 @@ section:nth-child(even) {
 @keyframes zoomin {
   0% {
     opacity: 0;
-    transform: scale(3);
-  }
-
-  38% {
-    opacity: 1;
-    transform: scale(1);
+    transform: scale(2);
   }
 
   100% {
     opacity: 1;
+    transform: scale(1);
   }
 }
 
 @-webkit-keyframes zoomin {
   0% {
     opacity: 0;
-    transform: scale(3);
-  }
-
-  38% {
-    opacity: 1;
-    transform: scale(1);
+    transform: scale(2);
   }
 
   100% {
     opacity: 1;
+    transform: scale(1);
   }
 }
 
@@ -838,12 +830,14 @@ section:nth-child(even) {
   padding: 0 0;
   opacity: 1;
   position: absolute;
+}
+.promo-current-slide.animated {
   -webkit-animation-name: zoomin;
-  -webkit-animation-duration: 8s;
-  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 3s;
+  -webkit-animation-iteration-count: 1;
   animation-name: zoomin;
-  animation-duration: 8s;
-  animation-iteration-count: infinite;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
 }
 
 .promo-previous-slide {
